# MFServer

./: .gitignore  LICENSE  README.md  server.slnx
MFServer/: CMakeLists.txt  MFConfig.lua  main.cpp  main.lua
MFServer/3rd/cjson/: fpconv.c  lua_cjson.c
MFServer/3rd/dmon/: dmon.c  dmon.h
MFServer/3rd/drogon/: CacheMap.h  HttpAppFramework.h  HttpClient.h  HttpRequest.h  HttpResponse.h  PubSubService.h  Session.h
MFServer/3rd/drogon/nosql/: RedisClient.h
MFServer/3rd/drogon/orm/: DbClient.h
MFServer/3rd/drogon/utils/: coroutine.h
MFServer/3rd/json/: reader.h  writer.h
MFServer/3rd/kcp/: ikcp.c
MFServer/3rd/lua/: lsproto.h
MFServer/3rd/queue/: concurrentqueue.h
MFServer/3rd/sol/: config.hpp  sol.hpp
MFServer/3rd/trantor/net/: EventLoop.h  InetAddress.h  Resolver.h  TcpConnection.h  TcpServer.h  UdpServer.h  UdpSocket.h
MFServer/3rd/trantor/utils/: AsyncFileLogger.h  Date.h  LockFreeQueue.h  Logger.h  MPSCQueue.hpp  MsgBuffer.h
MFServer/3rdback/: doc.md  lua_lproto.md
MFServer/core/: MFAnnotationHandle.cpp  MFAnnotationHandle.hpp  MFApplication.cpp  MFApplication.hpp  MFConnectionManager.cpp  MFConnectionManager.hpp  MFFileWatch.cpp  MFFileWatch.hpp  MFIoPool.cpp  MFIoPool.hpp  MFJsonConfig.cpp  MFJsonConfig.hpp  MFJsonExport.h  MFLuaByteCodeCache.cpp  MFLuaByteCodeCache.hpp  MFLuaExport.cpp  MFLuaExport.hpp  MFLuaExtend.c  MFLuaExtend.h  MFLuaMessage.hpp  MFLuaProfiler.cpp  MFLuaProfiler.hpp  MFLuaSeri.c  MFLuaSeri.h  MFLuaService.cpp  MFLuaService.hpp  MFLuaServiceManager.cpp  MFLuaServiceManager.hpp  MFLuaShareData.cpp  MFLuaShareData.hpp  MFMacro.h  MFMsgPack.c  MFMsgPack.h  MFMysqlClient.cpp  MFMysqlClient.hpp  MFMysqlConnectPool.cpp  MFMysqlConnectPool.hpp  MFNetManager.cpp  MFNetManager.hpp  MFObjectPool.hpp  (+29 more)
MFServer/coreScript/: api.lua
MFServer/coreScript/Core/: MF.lua  MFCoder.lua  MFCore.lua  MFFunctions.lua  MFHttp.lua  MFLuaRedis.lua  MFLuaSql.lua  MFLuaUtil.lua  MFMacro.lua  MFMsgHandlers.lua  MFRouterHandle.lua  MFRpcClient.lua  MFRpcServer.lua  MFShare.lua  MFSqlMapper.lua  MFString.lua  MFTcpSocket.lua  MFUdpSocket.lua  MFWebSocket.lua
MFServer/generProto/: login.pb
MFServer/lib/: libjemalloc.2.dylib
MFServer/protoFile/: login.proto
MFServer/protoFile/extentions/: ItemBase.proto  MsgOptions.proto  ResourceBase.proto
MFServer/script/Annotate/: ClientParams.lua  RegisterParams.lua
MFServer/script/Common/: GlobalRequire.lua  HttpRouter.lua  ProtoMsg.lua  TableConfig.lua
MFServer/script/Config/: Global.lua
MFServer/script/Handle/Game/: HeartBeatHandle.lua
MFServer/script/JsonConfig/: RedisConfig.json  RpcConfig.json  SocketConfig.json  SqlConfig.json
MFServer/script/Service/: LoginAgent.lua  LoginServer.lua  RpcClient.lua  RpcServer.lua  UdpService.lua  WebSocketServer.lua
MFServer/script/SqlMapper/: PlayerAccountMapper.lua  PlayerMapper.lua  PlayerUidMapper.lua
MFServer/tools/: buildProtoMsg.py
MFServer/winlib/: drogon.lib  jsoncpp.lib  lua.lib  trantor.lib
(+4 files in other folders)
